# binary_ops

./: Benchmark.ipynb  CMakeLists.txt  LICENSE.txt  README.md  bn_ops.py  bnmatmul_op.cc  bnmatmul_op.h  bnmatmul_op_gpu.cu
